# reading_map

./: .gitignore  QUICKSTART.md  README.md  start.bat
backend/: README.md  knowledge_dag.db  pyproject.toml  requirements.txt  run.py  start.bat  start.sh
backend/knowledge_dag/: __init__.py  __main__.py  config.py  main.py  models.py  routes.py  services.py  storage.py
example/: BIG_Tech.yaml  a.yaml  project.yaml
frontend/: .npmrc  .npmrc.example  ARCHITECTURE.md  GLOBAL_LAYOUT_COMPLETE.md  GLOBAL_LAYOUT_PROGRESS.md  LOGIC_FLOW.md  README.md  SUMMARY.md  electron-main.cjs  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  main.js  style.css
frontend/src/components/: ChapterSection.vue  ConnectionLine.vue  ConnectionLines.vue  DAGPanel.vue  ElementPropertiesPanel.vue  KnowledgeCard.vue  ProjectSidebar.vue
frontend/src/composables/: useGraphLinks.js
frontend/src/stores/: projectStore.js
